tests/ui/regions/regions-reborrow-from-shorter-mut-ref.stderr
error: lifetime may not live long enough
  --> $DIR/regions-reborrow-from-shorter-mut-ref.rs:6:5
   |
LL | fn copy_borrowed_ptr<'a, 'b>(p: &'a mut &'b mut isize) -> &'b mut isize {
   |                      --  -- lifetime `'b` defined here
   |                      |
   |                      lifetime `'a` defined here
LL |     &mut **p
   |     ^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

